<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ntnu.master.nofall.MedicationRegActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/activity_TUG_TV_Desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tugDescText"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/activity_TUG_TV_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_TUG_TV_Desc"
        android:layout_marginTop="22dp"
        android:hint="@string/tugTimer" />

    <Button
        android:id="@+id/activity_TUG_btn_StartTUG"
        style="@style/button_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@drawable/custom_button"
        android:onClick="OpenSelectMedActivity"
        android:text="@string/btnStart" />

</RelativeLayout>